--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -476,16 +476,21 @@ body {
     }
 
     .submit-button2 {
-        margin-top: 75px;
-        width: 100%;
+        margin-top: 50px;
+        background-color: #203036;
+        border-radius: 999px;
+        width: 160px;
+        padding: 5px 10px 5px 10px;
+        &:hover {
+            transform: scale(1.2);
+            transition: 0.25s;
+            background-color: green;
+        }
     }
 
     .submit-button2 a{
-        background-color: #203036;
         padding: 10px 20px 10px 20px;
         color: white;
-        border-radius: 999px;
-        list-style: none;
         font-size: 25px;
     }
 
