--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -504,7 +504,7 @@ body {
         color: white;
         text-align: center;
         margin-top: 0px;
-        height: 350px;
+        height: 330px;
         width: 200px;
     
         img {
@@ -522,6 +522,7 @@ body {
             background-color: white;
             color: #203036;
             font-weight: bold;
+            font-size: 17px;
             border-radius: 5px 5px 0px 0px;
             box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
         }
