--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -1,6 +1,6 @@
 .wrap { flex-wrap: wrap; }
 
-.estate-naples, .estate-rome, .estate-venice, .estate-florence, .flex-three-info-boxes, .estate-geneva, .estate-zurich, .estate-bern, .estate-lucerne, .estate-edinburgh, .estate-glasgow, .estate-warsaw, .estate-wroclaw, .estate-gdansk, .estate-krakow, .estate-copenhagen, .estate-bucharest, .estate-amsterdam, .estate-rotterdam, .estate-oslo, .estate-bergen, .estate-stavanger, .estate-trondheimg, .estate-dundee, .estate-aberdeen, .estate-aarhus, .estate-aalborg, .estate-odense, .estate-brasov, .estate-sibiu, .estate-constanta, .estate-maastricht, .estate-breda {
+.estate-naples, .estate-rome, .estate-venice, .estate-florence, .flex-three-info-boxes, .estate-geneva, .estate-zurich, .estate-bern, .estate-lucerne, .estate-edinburgh, .estate-glasgow, .estate-warsaw, .estate-wroclaw, .estate-gdansk, .estate-krakow, .estate-copenhagen, .estate-bucharest, .estate-amsterdam, .estate-rotterdam, .estate-oslo, .estate-bergen, .estate-stavanger, .estate-trondheimg, .estate-dundee, .estate-aberdeen, .estate-aarhus, .estate-aalborg, .estate-odense, .estate-brasov, .estate-sibiu, .estate-constanta, .estate-maastricht, .estate-breda, .estate-stockholm, .estate-malmo, .estate-gothenburg, .estate-orebro {
     display: flex;
 }
 
@@ -97,7 +97,7 @@
     border: 1px solid #ffffff;
 }
 
-.estate-naples h2, .estate-rome h2, .estate-venice h2, .estate-florence h2, .estate-zurich h2, .estate-bern h2, .estate-lucerne h2, .estate-edinburgh h2, .estate-glasgow h2, .estate-warsaw h2, .estate-wroclaw h2, .estate-gdansk h2, .estate-krakow h2, .estate-copenhagen h2, .estate-bucharest h2, .estate-amsterdam h2, .estate-rotterdam h2, .estate-oslo h2, .estate-bergen h2, .estate-stavanger h2, .estate-trondheimg h2, .estate-dundee h2, .estate-aberdeen h2, .estate-aarhus h2, .estate-aalborg h2, .estate-odense h2, .estate-brasov h2, .estate-sibiu h2, .estate-constanta h2, .estate-maastricht h2, .estate-breda h2 {
+.estate-naples h2, .estate-rome h2, .estate-venice h2, .estate-florence h2, .estate-zurich h2, .estate-bern h2, .estate-lucerne h2, .estate-edinburgh h2, .estate-glasgow h2, .estate-warsaw h2, .estate-wroclaw h2, .estate-gdansk h2, .estate-krakow h2, .estate-copenhagen h2, .estate-bucharest h2, .estate-amsterdam h2, .estate-rotterdam h2, .estate-oslo h2, .estate-bergen h2, .estate-stavanger h2, .estate-trondheimg h2, .estate-dundee h2, .estate-aberdeen h2, .estate-aarhus h2, .estate-aalborg h2, .estate-odense h2, .estate-brasov h2, .estate-sibiu h2, .estate-constanta h2, .estate-maastricht h2, .estate-breda h2, .estate-stockholm h2, .estate-malmo h2, .estate-gothenburg h2, .estate-orebro h2 {
   text-align: center;
   margin-left: 550px;
 }
