--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,7 +209,7 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger {
+.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one {
   margin-top: 20px;
   margin-left: 30px;
 }
