--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,12 +209,12 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house {
+.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house, .property-aalborg-house {
   margin-top: 20px;
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one, .property-aalborg-house-one {
   margin-top: 20px;
   margin-left: 40px;
 }
