--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,7 +209,7 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house, .property-aalborg-house, .property-odense-house-one {
+.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house, .property-aalborg-house, .property-odense-house-one, .proeperty-brasov {
   margin-top: 20px;
   margin-left: 30px;
 }
@@ -223,6 +223,6 @@
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house {
+.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house {
   margin-left: 40px;
 }
