--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -219,7 +219,7 @@
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu {
   margin-left: 30px;
 }
 
