--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -223,6 +223,6 @@
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house {
+.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house, .property-sibiu-hoise {
   margin-left: 40px;
 }
