--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -209,20 +209,20 @@
   margin-top: 150px;
 }
 
-.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house, .property-aalborg-house, .property-odense-house-one, .proeperty-brasov, .property-sibiu-house {
+.properties-geneva-house-one, .property-zurich, .properties-bern-house, .lucerne-property, .properties-edinburgh, .property-glasgow-house, .property-warsaw-house-one, .property-wroclaw-house-one, .property-gdansk-house-one, .property-krakow-house-one, .property-copenhagen-house-one, .property-bucharest-house-one, .property-amsterdam-house-one, .property-rotterdam-house-one, .property-oslo-house-one, .proeprty-bergen-house, .proerpty-stavaner-house, .proerpty-house-stavanger, .proerpty-dundee-house-one, .proerpty-aberdeen-house, .property-aarhus-house, .property-aalborg-house, .property-odense-house-one, .proeperty-brasov, .property-sibiu-house, .property-constanta-house-one {
   margin-top: 20px;
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one, .property-aalborg-house-one, .property-odense-house-two, .property-brasov-house-one, .property-sibiu-house-one {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one, .property-aalborg-house-one, .property-odense-house-two, .property-brasov-house-one, .property-sibiu-house-one, .property-constanta-house-two {
   margin-top: 20px;
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta {
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house, .property-sibiu-hoise {
+.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house, .property-sibiu-hoise, .property-constanta-house {
   margin-left: 40px;
 }
