--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -127,7 +127,7 @@
   margin-left: 40px;
 }
 
-.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last, .proerpty-oslo-last, .proerpty-bergen-last, .proeprty-stavanger-last, .property-stavnager-last, .proerpty-last-dunde, .proerpty-aberdeen-last, .property-aarhus-last, .property-aalborg-last, .property-odense-last, .property-house-brasov-last, .property-sibiu-last, .property-constanta-last, .proerpty-masstricht-last, .property-breda-lasr {
+.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last, .proerpty-oslo-last, .proerpty-bergen-last, .proeprty-stavanger-last, .property-stavnager-last, .proerpty-last-dunde, .proerpty-aberdeen-last, .property-aarhus-last, .property-aalborg-last, .property-odense-last, .property-house-brasov-last, .property-sibiu-last, .property-constanta-last, .proerpty-masstricht-last, .property-breda-lasr, .property-stockholm-last {
   margin-top: 30px;
   margin-left: 365px;
 }
@@ -219,10 +219,10 @@
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo {
   margin-left: 30px;
 }
 
-.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house, .property-sibiu-hoise, .property-constanta-house, .property-masstricht-house, .property-breda-house, .proerpty-stockholm-house {
+.properties-zurich, .properties-bern, .properties-lucerne, .edinburgh-property, .properties-glasgow, .property-warsaw-house, .property-wroclaw-house, .property-gdansk-house, .property-krakow-house, .property-copenhagen-house, .property-bucharest-house, .property-amsterdam-house, .property-rotterdam-house, .property-oslo-house, .proerpty-bergen, .proeperty-stavanger, .property-trondheim, .proerpty-dundee-house, .proerpty-aberdeen, .proerpty-aarhus, .proerpty-aalborg, .property-odense-house, .property-brasov-house, .property-sibiu-hoise, .property-constanta-house, .property-masstricht-house, .property-breda-house, .proerpty-stockholm-house, .property-malmo-house {
   margin-left: 40px;
 }
