--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -127,7 +127,7 @@
   margin-left: 40px;
 }
 
-.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last, .proerpty-oslo-last, .proerpty-bergen-last, .proeprty-stavanger-last, .property-stavnager-last, .proerpty-last-dunde, .proerpty-aberdeen-last, .property-aarhus-last, .property-aalborg-last, .property-odense-last, .property-house-brasov-last, .property-sibiu-last, .property-constanta-last, .proerpty-masstricht-last, .property-breda-lasr, .property-stockholm-last {
+.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last, .properties-geneva-house-last, .properties-zurich-last, .properties-bern-last, .lucerne-last-house, .edinburgh-last, .property-glasgow-last, .property-warsaw-last, .property-wroclaw-last, .property-gdansk-last, .property-krakow-last, .property-copenhagen-last, .property-bucharest-last, .property-amsterdam-last, .property-rotterdam-last, .proerpty-oslo-last, .proerpty-bergen-last, .proeprty-stavanger-last, .property-stavnager-last, .proerpty-last-dunde, .proerpty-aberdeen-last, .property-aarhus-last, .property-aalborg-last, .property-odense-last, .property-house-brasov-last, .property-sibiu-last, .property-constanta-last, .proerpty-masstricht-last, .property-breda-lasr, .property-stockholm-last, .property-malmo-last {
   margin-top: 30px;
   margin-left: 365px;
 }
@@ -214,12 +214,12 @@
   margin-left: 30px;
 }
 
-.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one, .property-aalborg-house-one, .property-odense-house-two, .property-brasov-house-one, .property-sibiu-house-one, .property-constanta-house-two, .property-masstricht-house-one, .property-masstricht-house-two, .proerpty-breda-house-two, .property-stockholm-house-two {
+.properties-geneva-house-two, .properties-zurich-house, .properties-bern-house-one, .lucerne-properties, .property-glasgow-house-one, .property-warsaw-house-two, .property-wroclaw-house-two, .property-gdansk-house-two, .property-krakow-house-two, .property-copenhagen-house-two, .property-bucharest-house-two, .property-amsterdan-house-two, .property-rotterdam-house-two, .proerpty-oslo, .proerpty-bergen-house-one, .proerpty-hpuse-stavanger, .proeprty-stanvager-house-one, .proerpty-second-dundee, .proerpty-aberdeen-house-one, .property-aarhus-house-one, .property-aalborg-house-one, .property-odense-house-two, .property-brasov-house-one, .property-sibiu-house-one, .property-constanta-house-two, .property-masstricht-house-one, .property-masstricht-house-two, .proerpty-breda-house-two, .property-stockholm-house-two, .proerpty-malmo-house-two {
   margin-top: 20px;
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo, .property-gothenburg {
   margin-left: 30px;
 }
 
