--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -137,7 +137,7 @@
   margin-left: 30px;
 }
 
-.properties-container-venice, .properties-container-florence, .edinburgh-house {
+.properties-container-venice, .properties-container-florence {
   margin-top: 20px;
   margin-left: 40px;
 }
@@ -219,7 +219,7 @@
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo, .property-gothenburg {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo, .property-gothenburg, .property-orebro {
   margin-left: 30px;
 }
 
