--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -5,232 +5,272 @@ body {
 
 /* Top Picture & filter*/
 
-.top-pic {
-  margin-top: 0px;
+.top-picture {
+  position: relative;
+  height: 710px;
+  width: 105%;
+  top: 0;
+  left: 0;
+  margin-top: -1000;
   padding: 0px;
 }
 
-.top-pic img{
-  height: 625px;
+.top-picture-background {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.600), rgba(0, 0, 0, 0.175)),
+  url(/photos/houseonahand.jpeg);
+  height: 100%;
   width: 100%;
-  margin: 0px;
+  top: 0px;
+  left: 0px;
+  margin-top: -10px;
+  margin-left: -10px;
   padding: 0px;
-  object-fit: cover;
-}
-
-.top-pic-content {
   position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 
-.top-pic-text {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  line-height: 0px;
-}
+  .picture-content {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    color: white;
 
-.top-pic-filters {
-  background-color: white;
-  border-radius: 9999px;
-  margin-top: 100px;
-  width: 1200px;
-  height: 75px;
-  display: inline-flex;
-}
+    .title-top-picture {
+      position: absolute;
+      h3 {
+        font-size: 39.5px;
+        margin-bottom: 0px;
+      }
+      h2 {
+        font-size: 100px;
+        margin-top: 5px;
+      }
+    }
 
-.filters {
-  display: inline-flex;
-  padding-bottom: 15px;
-}
+    .filters-top-picture {
+      margin-top: 400px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      background-color: white;
+      color: #203036;
+      border-radius: 99px;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 975px;
+      height: 75px;
+      gap: 5%;
+      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
 
-.filter {
-  display: flex;
-  align-items: center;
-  margin-inline: 50px;
-}
+      #last-filter {
+        margin-right: 50px;
+      }
 
-.filter-text {
-  line-height: 0px;
-}
+      .result-top-picture {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        border-radius: 99px;
+        padding: 10px;
+        background-color: #203036;
+        margin-right: 5%;
+        width: 100%;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
 
-.filter-text p {
-  width: 100%;
-  font-size: 24px;
-  font-weight: bold;
-}
+        a {
+          text-decoration: none;
+          color: white;
+          font-size: 20px;
+        }
+        &:hover {
+          transition: 0.2s;
+          transform: scale(1.1);
+          background-color: green;
+        }
+      }
 
-.filter-text span {
-  font-size: 18px;
-  opacity: 60%;
-}
+      .location-top-picture, .type-top-picture, .budget-top-picture {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 15px;
 
-.filter i {
-  opacity: 75%;
-  margin-right: 25px;
-  margin-top: 15px;
-  padding: 15px;
-  font-size: 20px;
-  border: solid black 1px;
-  border-radius: 9999px;
-}
+        i {
+          opacity: 80%;
+          color: #203036;
+          border-radius: 99px;
+          border: 1px solid #203036;
+          padding: 12.5px;
+          font-size: 18px;
+        }
 
-#location-icon {
-  padding-top: 12.5px;
-  padding-bottom: 12.5px;
-}
+        #location-icon {
+          padding-left: 12px;
+          padding-right: 12px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          margin-left: 5%;
+        }
 
-.filter-results {
-  margin-left: 8%;
-  display: flex;
-  text-align: center;
-  align-items: center;
-}
+        .under-filter {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 15px;
+          margin-top: 0px;
 
-.filter-results p {
-  display: flex;
-  padding-right: 30px;
-  padding-left: 30px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #203036;
-  border-radius: 999px;
-  font-size: 24px;
-  color: white;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
-  &:hover {
-    background-color: green;
-    transition: 0.2s;
-    transform: scale(1.1);
+          p {
+            margin-bottom: 0px;
+            font-size: 22px;
+          }
+
+          .span-top-picture {
+            opacity: 65%;
+            font-size: 15px;
+          }
+        }
+      }
+    }
   }
 }
 
 
 /* Newest Properties*/
 
-.content1-properties {
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 10%;
+.properties-on-market {
+  margin-left: 5%;
+  margin-right: 5%;
+  color: #203036;
+
   h2 {
-    color: #203036;
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  span {
+    opacity: 75%;
+    font-weight: bold;
+    font-size: 20px;
   }
 }
 
 .properties {
-  display: flex;
-  gap: 45px;
-}
 
-.property {
   display: flex;
-  flex-direction: column;
-  width: 330px;
-  height: 375px;
-  background-color: #556165;
-  border-radius: 5px;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
-  &:hover {
-    transform: scale(1.15);
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 30px;
+  height: 500px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  
+  .property {
+    margin-top: 50px;
+    width: 350px;
+    height: 400px;
     background-color: #203036;
-    transition: 0.25s;
-  }
-}
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
 
-.property img {
-  width: 330px;
-  height: 250px;
-  border-radius: 5px 5px 0px 0px;
-}
-
-.property-text {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  align-self: center;
-  line-height: 15px;
-}
-
-.property-text p {
-  font-weight: bold;
-  font-size: 27px;
-}
-
-.property-text span {
-  font-size: 22px;
-}
-
-.property-continue {
-  background: black;
-  border-radius: 5px;
-}
-
-#last-property-all {
-
-  width: 330px;
-  height: 375px;
-  position: relative;
-
-  .property-next-button {
-    opacity: 100%;
-    position: absolute;
-    z-index: 1;
-    margin-top: 145px;
-    margin-left: 50px;
-    i {
-      background-color: green;
-      padding-top: 5px;
-      padding-bottom: 5px;
+    a {
+      text-decoration: none;
       color: white;
-      padding-left: 10px;
-      padding-right: 10px;
-      border-radius: 99999px;
-      opacity: 100%;
-      z-index: 1;
     }
+
+    img {
+      margin-top: -42px;
+      width: 350px;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 5px 5px 0px 0px;
+    }
+
+    .property-type {
+      position: relative;
+      color: black;
+      display: flex;
+      width: 350px;
+      justify-content: center;
+
+      p {
+        background-color: white;
+        margin-top: 0px;
+        padding-bottom: 5px;
+        width: 150px;
+        text-align: center;
+        border-radius: 0px 0px 5px 5px;
+        font-weight: bold;
+        font-size: 17px;
+      }
+    }
+
+    .property-info {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      text-decoration: none;
+
+      h4 {
+        font-size: 25px;
+        margin: 0px;
+        margin-bottom: 15px;
+        margin-top: 25px;
+        padding: 0px;
+      }
+      h5 {
+        font-size: 22px;
+        margin: 0px;
+        padding: 0px;
+        font-weight: normal;
+      }
+    }
+
     &:hover {
-      transform: scale(1.6);
-      transition: 0.25s;
+      transition: 0.2s;
+      transform: scale(1.1);
+      background-image: linear-gradient(to top, rgba(8, 96, 57, 0.799), rgba(0, 0, 0, 0)),
+      url();
     }
   }
 }
 
-#last-property-bottom {
+#last-property {
+  position: relative;
+}
+#property-type-last {
   opacity: 25%;
-  display: flex;
-  flex-direction: column;
-  width: 330px;
-  height: 375px;
-  background-color: #203036;
-  border-radius: 5px;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+}
 
-   img {
-    width: 330px;
-    height: 250px;
-    border-radius: 5px 5px 0px 0px;
-  }
-  
-  .property-text {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-self: center;
-    line-height: 15px;
-  }
-  
-  .property-text p {
-    font-weight: bold;
+.see-more-button {
+  position: relative;
+  text-decoration: none;
+  color: white;
+}
+
+.see-more {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 400px;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.750), rgba(0, 0, 0, 0.750)),url();
+  border-radius: 5px;
+
+  p {
     font-size: 30px;
-  }
-  
-  .property-text span {
-    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 100px;
   }
 }
 
@@ -396,104 +436,95 @@ body {
 
 /* Newsletter */
 
+.bottom-content {
+  position: relative;
+  width: 101.5%;
+  height: 375px;
+  color: white;
+  margin: 0px;
+  padding: 0px;
+}
+
 .newsletter {
-  margin-top: 200px;
-  background-color: #203036;
-}
+  .background-newsletter {
+      position: relative;
+      height: 375px;
+      width: 100%;
 
-.newsletter img {
-  width: 100%;
-  height: 380px;
-  opacity: 0;
-}
+      img {
+          height: 375px;
+          width: 100%;
+          object-fit: cover;
+          object-position: 50% 20%;
+      }
+  }
 
-.newsletter-content {
-  width: 100%;
-  position: absolute;
-  z-index: 2;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
+  .content-newsletter  {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 375px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
-.newsletter-text {
-  line-height: 10px;
-  margin-top: 30px;
-}
+      .textbox-newsletter  {
+          font-weight: bold;
+          h3 {
+              font-size: 45px;
+              margin-bottom: 0px;
+          }
+          p {
+              font-size: 21.5px;
+          }
+      }
+      .submit-email-newsletter  {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 25px;
 
-.newsletter-text h3 {
-  font-size: 50px;
-  font-weight: bolder;
-}
+          .insert-email-newsletter  {
+              width: 450px;
 
-.newsletter-text p {
-  font-size: 26px;
-}
+              input {
+                  border: solid 2px white;
+                  border-radius: 99px;
+                  backdrop-filter: blur(25px);
+                  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+                  opacity: 100%;
+                  color: white; 
+                  font-size: 20px;
+                  background: none;
+                  padding: 5px 5px 5px 20px;
+                  width: 90%;
+                  &:focus {
+                      outline: none;
+                  }
+              }
+          }
 
-.nexsletter-emailbox {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  margin-top: 50px;
-}
+          .submit-button-newsletter  {
+              cursor: pointer;
 
-.enter-email {
-  display: flex;
-  align-items: center;
-  background-color: #4E5A5E;
-  width: 550px;
-  height: 50px;
-  border-radius: 9999px;
-  border: white solid 1px;
-}
+              p {
+                  background-color: green;
+                  padding: 10px 20px 10px 20px;
+                  border-radius: 99px;
+                  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+                  font-size: 20px;
 
-input {
-  background-color: #4E5A5E;
-  border: none;
-  margin-left: 25px;
-  font-size: 19px;
-  color: white;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  width: 90%;
-}
-
-input:focus {
-  outline: none;
-}
-
-.submit-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 50px;
-  font-size: 25px;
-  background-color: #456470;
-  border-radius: 9999px;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
-  &:hover {
-    transition: 0.2s;
-    transform: scale(1.2);
-    background-color: green;
+                  &:hover {
+                      transition: 0.2s;
+                      transform: scale(1.2);
+                      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.516);
+                  }
+              }
+          }
+      }
   }
 }
-
-.submit-button p {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.logo-background {
-  position: relative;
-  background-image: url(/photos/squiggly2-dark.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 380px;
-  width: 150%;
-}
-
 
 
 /* Make it responsive to smaller size screen*/
@@ -761,14 +792,6 @@ input:focus {
     font-size: 20px;
   }
 
-
-
-
-
-
-
-
-
   .content2-eco {
     margin-bottom: 50px;
     height: 350px;
@@ -887,54 +910,6 @@ input:focus {
   .content2-buying {
     margin-bottom: 0px;
     height: 400px;
-  }
-
-  .newsletter {
-    margin-top: 100px;
-    height: 275px;
-  }
-
-  .newsletter-text {
-    margin-top: 5px;
-    line-height: normal;
-  }
-  
-  .newsletter-text h3 {
-    font-size: 27px;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-bottom: 0px;
-  }
-  
-  .newsletter-text p {
-    margin-top: 5px;
-    font-size: 16px;
-    line-break: auto;
-    margin-right: 10%;
-    margin-left: 10%;
-  }
-  
-  .nexsletter-emailbox {
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 5%;
-    margin-right: 5%;
-    justify-content: center;
-  }
-  
-  .enter-email {
-    width: 200px;
-    height: 35px;
-  }
-  
-  .enter-email p {
-    font-size: 15px;
-    padding: 5px;
-  }
-  
-  .submit-button {
-    height: 30px;
   }
 
 }
