--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -149,6 +149,8 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   color: #203036;
+  margin-bottom: 125px;
+  margin-top: 50px;
 
   h2 {
     font-size: 40px;
