--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -210,6 +210,7 @@ body {
         border-radius: 0px 0px 5px 5px;
         font-weight: bold;
         font-size: 17px;
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
       }
     }
 
