--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -219,7 +219,7 @@
   margin-left: 40px;
 }
 
-.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo, .property-gothenburg, .property-orebro, .preoperty-helsinki, .proerpty-turku, .property-tampere, .property-porvoo, .property-riga, .property-ludza, .property-jelgava {
+.zurich-proerpties, .property-bern, .propety-lucerne, .property-edinburgh, .property-glasglow, .property-warsaw, .property-wroclaw, .property-gdansk, .property-krakow, .property-copenhagen, .property-bucharest, .property-amsterdam, .property-rotterdam, .property-oslo, .property-bergen, .proerpty-stavanger, .proerpty-trondheimg, .property-dundee, .property-aberdeen, .property-aarhus, .property-aalborg, .property-odense, .property-brasov, .property-sibiu, .property-constanta, .property-masstricht, .property-breda, .property-stockholm, .property-malmo, .property-gothenburg, .property-orebro, .preoperty-helsinki, .proerpty-turku, .property-tampere, .property-porvoo, .property-riga, .property-ludza, .property-jelgava, .property-jurmala {
   margin-left: 30px;
 }
 
