--- a/css-files/rent-detail.css
+++ b/css-files/rent-detail.css
@@ -291,6 +291,29 @@ body {
     display: none;
     background-color: white;
 
+    .gobackbutton {
+        margin-bottom: 5px;
+        margin-top: 25px;
+        margin-left: 5%;
+  
+         button {
+            cursor: pointer;
+            color: white;
+            font-size: 17px;
+            padding: 5px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background-color: #203036;
+            border-radius: 9999px;
+            opacity: 75%;
+            border: solid 2px #203036;
+            &:hover {
+              box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+              opacity: 100%;
+            }
+          }
+    }
+
     .content {
         width: 100%;
         margin-top: 50px;
