--- a/css-files/login.css
+++ b/css-files/login.css
@@ -11,3 +11,30 @@
     margin-top: 30px;
     padding-top: 20px;
 }
+
+#login-container h1 {
+    font-size: 45px;
+}
+
+#login-container label {
+    font-size: 25px;
+    margin-left: 30px;
+}
+
+#login-container input {
+    width: 250px;
+    margin-left: 20px;
+}
+
+#login-form-button {
+    border-radius: 15px;
+    background-color: #ffffff;
+    width: 200px;
+    margin-left: 390px;
+    margin-top: 50px;
+}
+
+#login-form-button a {
+    text-decoration: none;
+    color: red;
+}
