--- a/css-files/login.css
+++ b/css-files/login.css
@@ -34,7 +34,7 @@
     margin-top: 50px;
 }
 
-#login-form-button:hover, .#login-form-create-account-button:hover {
+#login-form-button:hover, #login-form-create-account-button:hover {
     background-color: #0C1435;
     width: 300px;
     height: 400px;
