--- a/css-files/login.css
+++ b/css-files/login.css
@@ -63,5 +63,19 @@
     color: red;
 }
 
-.wrap { flex-wrap: wrap; }
+.hero-image-login {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://st4.depositphotos.com/1008011/25358/i/450/depositphotos_253584854-stock-photo-luxury-house-exterior-theme-blur.jpg')
+}
 
+.hero-image-login {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-image-login {
+    width: 1400px;
+    border-radius: 15px;
+    margin-left: 20px;
+}
